package={ edition='2024', name='lidar' }

[dependencies]
vector={ git='https://github.com/Matthias-Fauconneau/vector' }
ui={ git='https://github.com/Matthias-Fauconneau/ui' }
las={version='*', features = ['laz']}
bytemuck='*'
fehler='*'
memmap={version='*', package='memmap2'}
owning-ref={package='owning_ref', version = "*"}
vulkano={ git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'] }
vulkano-spirv={ git='https://github.com/Matthias-Fauconneau/vulkano-spirv' }
image={git='https://github.com/Matthias-Fauconneau/image', features=['io']}
tiff='*'

[build-dependencies]
naga={ version='*', features = ['wgsl-in','spv-out'] }
bytemuck='*'

[patch.'https://github.com/Matthias-Fauconneau/ui'] # topology
ui={path='../ui'}

[patch.'https://github.com/vulkano-rs/vulkano'] # debug
vulkano={path='../vulkano/vulkano'}

[patch.'https://github.com/Matthias-Fauconneau/image'] # tiff
image={path='../image'}

[patch.crates-io] # tiff
tiff={path='../tiff'}
image={path='../image-rs'}
